[package]
name = "solverforge-maps"
version = "2.1.3"
edition = "2021"
description = "Generic map and routing utilities for VRP and similar problems"
license = "Apache-2.0"
repository = "https://github.com/solverforge/solverforge-maps"

[dependencies]
rayon = "1.11"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "fs",
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
tracing = "0.1"
utoipa = "5"

[dev-dependencies]
textplots = "0.8"
